added jszip as a dependency (required for base64 converting for qrcodes)

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "docxtemplater": "^1.0.1",
     "gulp-browserify": "^0.5.0",
+    "jszip": "^2.4.0",
     "png-js": "^0.1.1",
     "qrcode-reader": "0.0.5",
     "xmldom": "^0.1.19"
